pathing fixed for deployment, favicon added, button focus visible fix, html semantics added partially

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
 	max-width: 32px;
 	align-self: center;
 	align-items: center;
-	margin-left: 200px;
+	margin-left: 90px;
 }
 #title {
 	margin-top: 5dvh;
@@ -125,7 +125,6 @@ main {
 		margin-left: 0px;
 	}
 	.highlight-image {
-		min-width: 300px;
 		max-width: 380px;
 		max-height: 280px;
 		object-fit: cover;
@@ -143,7 +142,7 @@ main {
 		font-size: 2rem;
 	}
 	.highlight-image {
-		max-width: 50px !important;
+		max-width: 250px;
 		border: #124658 solid 2px;
 	}
 }
@@ -156,6 +155,7 @@ main {
 	p {
 		font-weight: bold;
 	}
+	gap: 10px;
 }
 .photo-highlight-footer {
 	display: flex;
@@ -209,9 +209,15 @@ button {
 	cursor: pointer;
 	outline: inherit;
 }
+button:focus-visible {
+	outline: 1px solid #1e728e;
+	outline-offset: 4px;
+	background-color: #124658;
+	border-color: #ffffff;
+}
 
 .button-close {
-	padding-right: 30px;
+	margin-right: 30px;
 }
 .DA-logo {
 	padding-top: 20px;
